# sidscript-compiler

./: .gitignore  CMakeLists.txt  code.txt  code_snippet.txt  execute.py  execute.sh  grammar.md  run_tests.sh  test.ss
example_code/: main  main.c  main.s  test.ss
include/: assembler.h  ast.h  error_handler.h  globalSymbolTable.h  lexer.h  module.h  parser.h  semanticAnalyser.h  symbolTable.h  tacGenerator.h  tokens.h  type.h
potential_tests/: test_complex_control.ss  test_functions.ss  test_maths.ss  test_pointers.ss  test_recursion.ss
src/: assembler.cpp  ast.cpp  globalSymbolTable.cpp  lexer.cpp  main.cpp  module.cpp  parser.cpp  semanticAnalyser.cpp  symbolTable.cpp  tacGenerator.cpp  test.cpp  type.cpp
tests/: hey.ss  test.ss  test_arrays.out  test_arrays.ss  test_arrays.ss.in  test_arrays_2.out  test_arrays_2.ss  test_complex_control.out  test_complex_control.ss  test_control_flow.out  test_control_flow.ss  test_functions.out  test_functions.ss  test_globals.out  test_globals.ss  test_maths.ss  test_pointers.out  test_recursion.out  test_recursion.ss  test_types.ss
